Add dependency on test job for prod environment

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,7 @@ jobs:
         run: echo 'Hello, from test'
   prod:
     environment: prod
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Run a one-line script
