--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run a one-line script
-        run: echo 'Hello, from test'
+        run: echo ${{secrets.gege}}
   prod:
     environment: prod
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Run a one-line script
-        run: echo 'Hello, from prod'
+        run: echo ${{secrets.gege}}
